# iToDo

./: .gitignore  index.html  package.json  tailwind.config.js
.github/workflows/: build.yml
docs/: README-en-US.md  README-zh-CN.md  README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  about.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx  TaskDetail.tsx  TaskList.tsx
src/store/: index.ts
src/types/: index.ts
